Call established between the phone and app

--- a/asteriskConfiguration/extensions.conf
+++ b/asteriskConfiguration/extensions.conf
@@ -3,3 +3,5 @@ exten = 100,1,Answer()
 same = n,Wait(1)
 same = n,Playback(hello-world)
 same = n,Hangup()
+exten=>6001,1,Dial(SIP/6001,20)
+exten=>5001,1,Dial(SIP/5001,20)
