--- a/asteriskConfiguration/pjsip.conf
+++ b/asteriskConfiguration/pjsip.conf
@@ -3,20 +3,36 @@ type=transport
 protocol=udp
 bind=0.0.0.0
 
-[6001]
+
+[internal_endpoint](!)
 type=endpoint
 context=from-internal
 disallow=all
 allow=ulaw
-auth=6001
-aors=6001
 
-[6001]
+[auth_userpass](!)
 type=auth
 auth_type=userpass
-password=unsecurepassword
-username=6001
 
-[6001]
+[aor_dynamic](!)
 type=aor
 max_contacts=1
+
+
+
+[6001](internal_endpoint)
+auth=6001
+aors=6001
+[6001](auth_userpass)
+username=6001
+password=unsecurepassword
+[6001](aor_dynamic)
+
+[5001](internal_endpoint)
+auth=5001
+aors=5001
+[5001](auth_userpass)
+username=5001
+password=pawel
+[5001](aor_dynamic)
+
