--- a/asteriskConfiguration/sip.conf
+++ b/asteriskConfiguration/sip.conf
@@ -1,10 +1,16 @@
 [general]
 context=default
 
-[6001]
+[sip_pawel_endpoint](!)
 type=friend
 context=from-internal
 host=dynamic
-secret=unsecurepassword
 disallow=all
 allow=ulaw
+
+[6001](sip_pawel_endpoint)
+secret=unsecurepassword
+
+[5001](sip_pawel_endpoint)
+secret=pawel
+
